--- a/src/components/FriendsList/style.css
+++ b/src/components/FriendsList/style.css
@@ -2,7 +2,7 @@
   font-size: 36px;
   margin-bottom: 50px;
   text-align: center;
-  color: #ef6c00;
+  color: var(--primary-color);
 }
 
 .friends-list {
@@ -20,9 +20,9 @@
   padding: 16px 0px;
   width: 200px;
   height: 200px;
-  background-color: #33343b;
+  background-color: var(--dark-grey-color);
   margin-bottom: 12px;
-  color: #ef6c00;
+  color: var(--primary-color);
   border-radius: 10px;
 }
 
@@ -32,5 +32,5 @@
 }
 
 .friend-name {
-  color: #fafaf9;
+  color: var(--accent-color);
 }
