--- a/src/components/Friend/style.css
+++ b/src/components/Friend/style.css
@@ -20,6 +20,8 @@
 
 .friend-details-description {
   color: var(--accent-color);
+  width: clamp(100px, 60%, 90vw);
+  margin: 0 auto;
 }
 
 .friend-details-profile {
