chore: adds faker to improve friends data

--- a/src/components/Friend/style.css
+++ b/src/components/Friend/style.css
@@ -18,6 +18,10 @@
   color: var(--accent-color);
 }
 
+.friend-details-name {
+  font-size: 32px;
+}
+
 .friend-details-description {
   color: var(--accent-color);
   width: clamp(100px, 80%, 70vw);
